# Intellinoun

./: .env.example  .gitignore  README.md  pyproject.toml  votes-reason-classification.csv  votes-reason-classification.xlsx
.github/: FUNDING.yml
convert_file_format/: csv_to_json.py  csv_to_xlsx.py
convert_files/: csv_to_xlsx.py
dashboard/: exploreSentiment.py
data/enhanced/: votes_SentimentAnalysis.csv  votes_SentimentAnalysis.json  votes_SentimentAnalysis.xlsx  votes_SentimentAnalysis_flair.csv  votes_SentimentAnalysis_flair.json  votes_SentimentAnalysis_flair.xlsx
data/prepared/: votes_SentimentPrep.csv  votes_SentimentPrep.json
data/processed/: votes_Dataset.csv  votes_SentimentAnalysis.csv  votes_SentimentAnalysis.json  votes_SentimentAnalysis_02.csv  votes_SentimentAnalysis_02.json  votes_SentimentAnalysis_03.csv  votes_SentimentAnalysis_04.csv
data/raw/: votes_raw.csv  votes_raw.json  votes_withReason.csv  votes_withReason.json
data/timestamps/: fetch_votes.txt
data_enhanced/: proposals_enhanced.csv  proposals_enhanced.json  votes_ReasonClassificationPrep.csv  votes_ReasonClassificationPrep.json  votes_ReasonClassified.csv  votes_ReasonClassified.json  votes_ReasonClassifiedRated.csv  votes_ReasonClassifiedRated.json  votes_enhanced.csv  votes_enhanced.json
data_processing/formatEnhance/: proposals_addParticipation_rate.py  votes_ReasonClassification 2.py  votes_ReasonClassificationPrep.py  votes_ReasonClassificationRating.py  votes_formatEnhance.py
data_processing/votes/: ClassificationReport_vsAVG.py  votes_SentimentAnalysis.py  votes_SentimentAnalysisFlair.py  votes_SentimentAnalysis_01.py  votes_SentimentAnalysis_02.py  votes_SentimentAnalysis_03.py  votes_SentimentAnalysis_04.py  votes_SentimentPrep.py  votes_compileAvg.py  votes_compileDataset.py  votes_compileOverview.py  votes_compileSentiment.py
data_raw/: auctions_raw.csv  auctions_raw.json  proposals_raw.csv  proposals_raw.json  votes_raw.csv  votes_raw.json  voteswithReason_raw.csv  voteswithReason_raw.xlsx
data_raw/enriched/: voteswithReason_Sentiment_raw.csv  (+2 more)
fetch_data/: fetch_auctions.py  fetch_proposals.py  fetch_proposals_detailed.py  fetch_votes.py  votes_fetch.py
(+7 files in other folders)
